[gd_scene load_steps=13 format=3 uid="uid://y1hpcf40b55f"]

[ext_resource type="Texture2D" uid="uid://dopfqygkv0cp8" path="res://Frontend/Recourses/GameStart.png" id="1_7fasl"]
[ext_resource type="Script" path="res://Backend/Code/Levels/Level8.gd" id="1_rsm35"]
[ext_resource type="Texture2D" uid="uid://cgr1ruanqrx1b" path="res://Frontend/Recourses/wallpaper_monitor.png" id="2_twwe4"]
[ext_resource type="Texture2D" uid="uid://0f6wmnlgh5fn" path="res://Frontend/Recourses/browser_13408985.png" id="3_2g32e"]
[ext_resource type="Texture2D" uid="uid://berhbt8ceajj5" path="res://Frontend/Recourses/mail_9068642.png" id="4_7ag5v"]
[ext_resource type="Texture2D" uid="uid://piktxiednwh" path="res://Frontend/Recourses/browser.png" id="5_0uqcp"]
[ext_resource type="Texture2D" uid="uid://wj75lcanwg0g" path="res://Frontend/Recourses/vpn_9694717.png" id="6_j64fg"]
[ext_resource type="PackedScene" uid="uid://dkrkk78fdiww6" path="res://Frontend/Scenes/Instruments/Email.tscn" id="7_1ybyu"]
[ext_resource type="PackedScene" uid="uid://qxtpt0gymowq" path="res://Frontend/Scenes/Instruments/VPN.tscn" id="8_bx72f"]
[ext_resource type="PackedScene" uid="uid://j1gaj4y3ktw1" path="res://Frontend/Scenes/Instruments/WorkChat.tscn" id="9_n44hc"]
[ext_resource type="PackedScene" uid="uid://csuhyqjgu6da8" path="res://Frontend/Scenes/Instruments/RecordApp.tscn" id="10_jehvj"]
[ext_resource type="PackedScene" uid="uid://dpt2kcjnrcwgb" path="res://Frontend/Scenes/Instruments/Book.tscn" id="11_2bra4"]

[node name="Level8" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rsm35")

[node name="GameStart" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7fasl")
expand_mode = 1

[node name="Book_Button" type="Button" parent="GameStart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -251.0
offset_right = -130.0
offset_bottom = 47.0
grow_horizontal = 2
text = "Book"

[node name="Back_to_menu" type="Button" parent="GameStart"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -111.0
offset_bottom = 47.0
grow_horizontal = 0
text = "Menu"

[node name="Wallpaper" type="TextureRect" parent="GameStart"]
layout_mode = 0
anchor_left = 0.0399306
anchor_top = 0.0972222
anchor_right = 0.974826
anchor_bottom = 0.828704
texture = ExtResource("2_twwe4")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 92.0
offset_bottom = 99.0
flat = true

[node name="Browser13408985" type="Sprite2D" parent="GameStart/Wallpaper/Button"]
position = Vector2(42.5, 48.9346)
scale = Vector2(0.148926, 0.147537)
texture = ExtResource("3_2g32e")

[node name="Button2" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
offset_left = 5.0
offset_top = 96.0
offset_right = 85.0
offset_bottom = 176.0
flat = true

[node name="Mail9068642" type="Sprite2D" parent="GameStart/Wallpaper/Button2"]
position = Vector2(45, 45)
scale = Vector2(0.151367, 0.143892)
texture = ExtResource("4_7ag5v")

[node name="Button3" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
offset_left = 9.0
offset_top = 182.0
offset_right = 93.0
offset_bottom = 265.0
flat = true

[node name="Browser" type="Sprite2D" parent="GameStart/Wallpaper/Button3"]
position = Vector2(40, 43)
scale = Vector2(0.161377, 0.153749)
texture = ExtResource("5_0uqcp")

[node name="Button4" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
offset_left = 8.0
offset_top = 265.0
offset_right = 92.0
offset_bottom = 358.0
flat = true

[node name="Vpn9694717" type="Sprite2D" parent="GameStart/Wallpaper/Button4"]
position = Vector2(42, 47)
scale = Vector2(0.150879, 0.142706)
texture = ExtResource("6_j64fg")

[node name="List_of_tasks" type="Panel" parent="GameStart/Wallpaper"]
layout_mode = 0
offset_left = 870.0
offset_top = 3.0
offset_right = 1080.0
offset_bottom = 205.0
metadata/_edit_use_anchors_ = true

[node name="Color_List_of_tasks" type="ColorRect" parent="GameStart/Wallpaper/List_of_tasks"]
modulate = Color(0.870588, 0.870588, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_List_of_task" type="TextEdit" parent="GameStart/Wallpaper/List_of_tasks"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Task:
Open Email"
editable = false

[node name="Email" parent="GameStart/Wallpaper" instance=ExtResource("7_1ybyu")]
visible = false
layout_mode = 1
offset_left = 1.0
offset_top = 1.0
offset_right = -74.0
offset_bottom = -173.0

[node name="Vpn" parent="GameStart/Wallpaper" instance=ExtResource("8_bx72f")]
visible = false
layout_mode = 1
offset_left = 798.0
offset_top = 171.0
offset_right = -75.0
offset_bottom = -174.0

[node name="WorkChat" parent="GameStart/Wallpaper" instance=ExtResource("9_n44hc")]
visible = false
layout_mode = 1
offset_left = 3.0
offset_top = 5.0
offset_right = -76.0
offset_bottom = -177.0

[node name="RecordApp" parent="GameStart/Wallpaper" instance=ExtResource("10_jehvj")]
visible = false
layout_mode = 1
offset_left = 9.0
offset_top = 2.0
offset_right = -77.0
offset_bottom = -177.0

[node name="Book" parent="GameStart/Wallpaper" instance=ExtResource("11_2bra4")]
visible = false
layout_mode = 1
offset_left = -225.0
offset_top = -4.0
offset_right = -147.0
offset_bottom = -99.0
scale = Vector2(1.6, 1.6)

[node name="Show_text" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 307.0
offset_top = 382.0
offset_right = 849.0
offset_bottom = 455.0
editable = false
metadata/_edit_use_anchors_ = true

[node name="GameOver" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="GameOver"]
layout_mode = 0
offset_left = 308.0
offset_top = 179.0
offset_right = 877.0
offset_bottom = 244.0
text = "Game Over"
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="GameOver"]
layout_mode = 0
offset_left = 406.0
offset_top = 265.0
offset_right = 767.0
offset_bottom = 296.0
text = "You mad to may mistakes"
alignment = 1

[node name="Exit" type="Button" parent="GameOver"]
layout_mode = 0
offset_left = 511.0
offset_top = 321.0
offset_right = 664.0
offset_bottom = 372.0
text = "Back to menu"

[node name="GameFinnish" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="GameFinnish"]
layout_mode = 0
offset_left = 308.0
offset_top = 179.0
offset_right = 877.0
offset_bottom = 244.0
text = "Game Completed"
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="GameFinnish"]
layout_mode = 0
offset_left = 406.0
offset_top = 265.0
offset_right = 767.0
offset_bottom = 296.0
text = "Congratulations You finnished game "
alignment = 1

[node name="Exit" type="Button" parent="GameFinnish"]
layout_mode = 0
offset_left = 511.0
offset_top = 321.0
offset_right = 664.0
offset_bottom = 372.0
text = "Back to menu"

[connection signal="pressed" from="GameStart/Book_Button" to="." method="_on_book_button_pressed"]
[connection signal="pressed" from="GameStart/Back_to_menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="GameOver/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="GameFinnish/Exit" to="." method="_on_exit_pressed"]
